--- a/index.html
+++ b/index.html
@@ -3,10 +3,20 @@
   <head>
     <meta charset="utf-8">
     <title>HTML Academy: Девайс</title>
-  </head>
-  <body>
 
-    <p>Репозиторий создан для обучения на профессиональном онлайн‑курсе «<a href="https://htmlacademy.ru/intensive/htmlcss">HTML и CSS. Профессиональная вёрстка сайтов</a>».</p>
+    <link rel="icon" href="favicon.ico">
+    <link rel="icon" type="image/png" sizes="32x32" href="img/favicon-32.png">
+  
+    <link rel="stylesheet" href="css/style.css">
+    <meta name="keywords" content="Sedona, Седона">
+    <meta name="description" content="Главная страница проекта">
+  </head>
+
+  <body>
+    <header class="page-header">
+      
+    </header>
+    
 
   </body>
 </html>
