--- a/index.html
+++ b/index.html
@@ -8,15 +8,103 @@
     <link rel="icon" type="image/png" sizes="32x32" href="img/favicon-32.png">
   
     <link rel="stylesheet" href="css/style.css">
-    <meta name="keywords" content="Sedona, Седона">
+    <meta name="keywords" content="Device, Девайс">
     <meta name="description" content="Главная страница проекта">
   </head>
 
   <body>
     <header class="page-header">
-      
+      <section>
+        <a class="logo">
+          <img class="page-header-logo" alt="Логотип «Device»." src="images/logo.svg" width="145" height="37">
+        </a>
+
+        <form class="search" action="https://echo.htmlacademy.ru/" method="post">
+          <label class="visually-hidden" for="find-product">Поиск товара</label>
+          <input class="search-input" type="search" name="find-product" id="find-product" required autocomplete="on">
+          <button class="search-input" type="submit">Найти</button>
+        </form>
+
+        <ul class="user-menu">
+          <li class="user-menu-item">
+            <a class="user-menu-link" href="#">Войти</a>
+          </li>
+          <li class="user-menu-item">
+            <a class="user-menu-link" href="#">Сравнить</a>
+          </li>
+          <li class="user-menu-item">
+            <a class="user-menu-link" href="#">Корзина</a>
+          </li>
+        </ul>
+
+        <a class="catalog">
+          Каталог товаров
+          <span class="catalog open-catalog close-catalog"></span>
+        </a>
+
+        <ul class="navigation-menu">
+          <li class="navigation-item">
+            <a class="navigation-link" href="#">Доставка</a>
+          </li>
+          <li class="navigation-item">
+            <a class="navigation-link" href="#">Гарантия</a>
+          </li>
+          <li class="navigation-item">
+            <a class="navigation-link" href="#">Контакты</a>
+          </li>
+        </ul>
+      </section>
     </header>
     
+    <main>
+      <section>
+        <div class="slider">
+          <div class="slider-wrapper">
+            <img class="slider-image" src="images/gallery-1.jpg" alt="Демонстрвция товара" width="390" height="250">
+
+            <div class="slider-controls">
+              <button class="slider-button slider-next" type="button">
+                <span class="visually-hidden">Предыдущий товар</span>
+              </button>
+              <button class="slider-button slider-prev" type="button">
+                <span class="visually-hidden">Следующий товар</span>
+              </button>
+            </div>
+          </div>
+
+          <div class="slider-wrapper">
+            <span name="like-count">01</span>
+            <h2 class="h2">Порхает как бабочка, жалит как пчела!</h2>
+            <p class="p">Этот обычный, на первый взгляд, квадрокоптер оснащен мощным лазером, замаскированным под стандартную камеру.</p>
+            <a class="button-link" href="#">Подробнее</a>
+            <ol class="slider-pagination">
+              <li class="slider-pagination-item">
+                <button class="slider-pagination-button slider-pagination-button-current" type="button">
+                  <span class="visually-hidden">1 товар</span>
+                </button>
+              </li>
+              <li class="slider-pagination-item">
+                <button class="slider-pagination-button" type="button">
+                  <span class="visually-hidden">2 товар</span>
+                </button>
+              </li>
+              <li class="slider-pagination-item">
+                <button class="slider-pagination-button" type="button">
+                  <span class="visually-hidden">3 товар</span>
+                </button>
+              </li>
+            </ol>
+
+            <dl class="characteristic">
+                <dt>800 м</dt>
+                <dd>Дальность полета</dd>
+                <dt>50 м</dt>
+                <dd>Радиус поражения</dd>
+            </dl>
+          </div>
+        </div>
+      </section>
+    </main>
 
   </body>
 </html>
