--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
   <body>
     <header class="page-header">
-      <section>
+      <nav class="navigation">
         <a class="logo">
           <img class="page-header-logo" alt="Логотип «Device»." src="images/logo.svg" width="145" height="37">
         </a>
@@ -37,10 +37,10 @@
           </li>
         </ul>
 
-        <a class="catalog">
+        <button class="catalog">
           Каталог товаров
           <span class="catalog open-catalog close-catalog"></span>
-        </a>
+        </button>
 
         <ul class="navigation-menu">
           <li class="navigation-item">
@@ -53,7 +53,7 @@
             <a class="navigation-link" href="#">Контакты</a>
           </li>
         </ul>
-      </section>
+      </nav>
     </header>
     
     <main>
@@ -73,7 +73,7 @@
           </div>
 
           <div class="slider-wrapper">
-            <span name="like-count">01</span>
+            <span class="slider-number">01</span> <!-- Тут скорее всего понадобится весь перелистывающийся контент завернуть в ol -->
             <h2 class="h2">Порхает как бабочка, жалит как пчела!</h2>
             <p class="p">Этот обычный, на первый взгляд, квадрокоптер оснащен мощным лазером, замаскированным под стандартную камеру.</p>
             <a class="button-link" href="#">Подробнее</a>
@@ -104,7 +104,146 @@
           </div>
         </div>
       </section>
+      
+      <section>
+        <h2 class="visually-hidden">Различные категории товаров</h2>
+        <ol>
+          <li>
+            <a href="#">Виртуальная реальность</a>
+          </li>
+          <li>
+            <a href="#">Моноподы для селфи</a>
+          </li>          
+          <li>
+            <a href="#">Экшн-камеры</a>
+          </li>          
+          <li>
+            <a href="#">Фитнес-браслеты</a>
+          </li>          
+          <li>
+            <a href="#">Умные часы</a>
+          </li>          
+          <li>
+            <a href="#">Квадрокоптеры</a>
+          </li>
+        </ol>
+      </section> 
+
+      <section>
+        <ul>
+          <li>
+            <a href="#">Доставка</a>
+          </li>
+          <li>
+            <a href="#">Гарантия</a>
+          </li>          
+          <li>
+            <a href="#">Кредит</a>
+          </li>
+        </ul>
+
+        <div>
+          <h2 class="h2">Доставка</h2>
+          <p class="p">Мы с удовольствием доставим ваш товар прямо к вашему подъезду совершенно бесплатно! Ведь мы неплохо заработаем, поднимая его на ваш этаж.</p>
+        </div>
+      </section>
+
+      <section>
+        <h2 class="visually-hidden">Различные категории товаров</h2>
+        <a href="#">Доставим редкий товар под заказ</a>
+      </section>
+
+      <section>
+        <ul>
+          <li>
+            <h2 class="h2">О нас</h2>
+            <p class="p">Огромный выбор гаджетов не оставит равнодушным гика, который есть в каждом из нас.</p>
+            <p class="p">Мы можем доставить ваш товар в самые отдалённые уголки России транспортными компаниями:</p>
+            <ul>
+              <li>Меловые линии</li>
+              <li>СДИК</li>
+              <li>ТоксБерри</li>
+            </ul>
+            <a href="#">Подробнее о нас</a>
+          </li>
+          <li>
+            <h2 class="h2">Контакты</h2>
+            <p class="p">Вы можете забрать товар сами, заехав в наш офис. Заодно сможете проверить работоспособность покупки.</p>
+            <h3 class="h3">Интернет-магазин «Девайс»</h3>
+            <p class="p">Санкт-Петербург, набережная реки Карповки, 5, литера П.</p>
+            <address>
+              <a class="contacts-phone" href="tel:+78128121212">+7 (812) 812-12-12</a>
+            </address>
+
+            <h3 class="h3">Интернет-магазин «Девайс»</h3>
+            <p class="p">пн—пт: с 10:00 до 22:00 <br>сб—вс: с 10:00 до 19:00</p>
+            <a href="#">Напишите нам</a>
+          </li>
+        </ul>
+      </section>
+
+      <section>
+        <h2 class="h2">Подпишитесь на рассылку</h2>
+        <p class="p">Еженедельный дайджест с обзорами новинок, длительными тест-драйвами, распаковками, а также акции, спецпредложения и вот это вот всё.</p>
+        <form  class="email" action="https://echo.htmlacademy.ru/" method="post">
+          <label class="visually-hidden" for="newsletter-email">Email</label>
+          <input class="email-input" type="email" name="newsletter-email" id="newsletter-email" placeholder="Ваш e-mail" required autocomplete="on">
+          <button class="blue-button" type="submit">Подписаться</button>
+        </form>
+        <p class="p">Это бесплатно</p>
+      </section> 
     </main>
+
+    <footer class="page-footer">
+      <h2 class="visually-hidden">Дополнительная информация</h2>
+      <img src="#" alt="Device">
+
+      <p class="p-footer">Санкт-Петербург, набережная реки Карповки, 5, литера П.</p>
+
+      <ul>
+        <li>
+          <a href="#">Доставка</a>
+        </li>
+        <li>
+          <a href="#">Гарантия</a>
+        </li>          
+        <li>
+          <a href="#">Контакты</a>
+        </li>
+      </ul>
+
+      <h3 class="visually-hidden">Контактный телефон</h3>
+      <address>
+        <a class="contacts-phone" href="tel:+78128121212">Тел.: +7 (812) 812-12-12</a>
+      </address>
+
+      <div class="yellow-line"></div>
+
+      <h3 class="visually-hidden">Социальные сети</h3>
+      <ul class="social-list">
+        <li class="social-item">			
+          <a class="social-item-link twitter" href="https://twitter.com/htmlacademy-ru">
+            <span class="visually-hidden">twitter</span>
+          </a>
+        </li>
+        <li class="social-item">
+          <a class="social-item-link facebook" href="https://www.facebook.com/htmlacademy">
+            <span class="visually-hidden">facebook</span>
+          </a>
+        </li>
+        <li class="social-item">
+          <a class="social-item-link youtube" href="https://www.youtube.com/c/HTMLAcademyRUS">
+            <span class="visually-hidden">youtube</span>
+          </a>
+        </li>
+      </ul>
+
+			<h3 class="visually-hidden">Ссылка Html Academy</h3>
+      <a class="htmlacademy-logo-link" href="https://htmlacademy.ru/">
+        <span class="visually-hidden">Логотип Html Academy</span>
+      </a>
+
+    </footer>
 
   </body>
 </html>
