--- a/catalog.html
+++ b/catalog.html
@@ -22,7 +22,7 @@
         <form class="search" action="https://echo.htmlacademy.ru/" method="post">
           <label class="visually-hidden" for="find-product">Поиск товара</label>
           <input class="search-input" type="search" name="find-product" id="find-product" required autocomplete="on">
-          <button class="search-input" type="submit">Найти</button>
+          <button class="catalog-button-span" type="submit">Найти</button>
         </form>
 
         <ul class="user-menu">
