--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
 
         <form class="search" action="https://echo.htmlacademy.ru/" method="post">
           <label class="visually-hidden" for="find-product">Поиск товара</label>
-          <input class="search-input" type="search" name="find-product" id="find-product" required autocomplete="on">
-          <button class="search-input" type="submit">Найти</button>
+          <input class="search-input" type="search" name="find-product" id="find-product" required autocomplete="on" placeholder="Поиск по сайту">
+          <button class="search-button" type="submit">Найти</button>
         </form>
 
         <ul class="user-menu">
@@ -37,9 +37,9 @@
           </li>
         </ul>
 
-        <button class="catalog">
+        <button class="catalog-button">
           Каталог товаров
-          <span class="catalog open-catalog close-catalog"></span>
+          <span class="catalog-button-span open-catalog close-catalog"></span>
         </button>
 
         <ul class="navigation-menu">
@@ -60,7 +60,7 @@
       <section>
         <div class="slider">
           <div class="slider-wrapper">
-            <img class="slider-image" src="images/gallery-1.jpg" alt="Демонстрвция товара" width="390" height="250">
+            <img class="slider-image" src="images/gallery-1.png" alt="Демонстрация товара" width="560" height="560">
 
             <div class="slider-controls">
               <button class="slider-button slider-next" type="button">
@@ -175,7 +175,7 @@
               <a class="contacts-phone" href="tel:+78128121212">+7 (812) 812-12-12</a>
             </address>
 
-            <h3 class="h3">Интернет-магазин «Девайс»</h3>
+            <h3 class="h3">Время работы</h3>
             <p class="p">пн—пт: с 10:00 до 22:00 <br>сб—вс: с 10:00 до 19:00</p>
             <a href="#">Напишите нам</a>
           </li>
