pixel perfect + переполнение

--- a/catalog.html
+++ b/catalog.html
@@ -17,8 +17,8 @@
 			<div class="container">
 				<nav class="navigation">
 					<a class="logo" href="index.html">
-						<img class="page-logo-background" alt="Логотип «Device»." src="images/logo.svg" width="145" height="36">
-						<img class="page-logo" alt="Логотип «Device»." src="images/logo.svg" width="145" height="36">
+						<img class="page-logo-background" alt="Логотип «Device»." src="images/logo.svg" width="146" height="37">
+						<img class="page-logo" alt="Логотип «Device»." src="images/logo.svg" width="146" height="37">
 					</a>
 
 					<form class="search" action="https://echo.htmlacademy.ru/" method="post">
@@ -156,7 +156,7 @@
 							<a class="breadcrumbs-link" href="index.html">Главная</a>
 						</li>
 						<li class="breadcrumbs-item">
-							<a class="breadcrumbs-link"  href="#">Каталог</a>
+							<a class="breadcrumbs-link"  href="#">Каталог товаров</a>
 						</li>
 						<li class="breadcrumbs-item">
 							<a class="breadcrumbs-link"  href="#">Моноподы для селфи</a>
@@ -269,7 +269,7 @@
 							<div class="sorting-container">
 									<h3 class="h3-catalog">Сортировка:</h3>
 									<select class="select-control" aria-label="Сортировка">
-											<option value="popular">Популярное</option>
+											<option value="popular">Популярные</option>
 											<option value="cheap">Дешёвое</option>
 											<option value="expensive">Дорогое</option>
 									</select>
@@ -317,7 +317,7 @@
 
 												<div class="product-card-content">
 													<h4 class="product-card-title">Профессиональная селфи&#8209;палка</h4>
-													<span class="product-card-price">1500 ₽</span>
+													<span class="product-card-price">1 500 ₽</span>
 												</div>
 											</a>
 										</li>
@@ -332,7 +332,7 @@
 
 												<div class="product-card-content">
 													<h4 class="product-card-title">Непотопляемая селфи&#8209;палка</h4>
-													<span class="product-card-price">2500 ₽</span>
+													<span class="product-card-price">2 500 ₽</span>
 												</div>
 											</a>
 										</li>
@@ -347,13 +347,13 @@
 
 												<div class="product-card-content">
 													<h4 class="product-card-title">Селфи-палка «Следуй за&nbsp;мной»</h4>
-													<span class="product-card-price">1500 ₽</span>
+													<span class="product-card-price">1 500 ₽</span>
 												</div>
 											</a>
 										</li>
 								</ul>
 
-								<button class="white-button" type="button">Загрузить еще</button>
+								<button class="white-button" type="button">&nbsp;Загрузить еще</button>
 
 								<div class="pagination-container">
 										<a class="pagination-prev pagination-disabled">Назад</a>
