--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
 			<div class="container">
 				<nav class="navigation">
 					<a class="logo" href="#">
-						<img class="page-logo-background" alt="Логотип «Device»." src="images/logo.svg" width="145" height="36">
-						<img class="page-logo" alt="Логотип «Device»." src="images/logo.svg" width="145" height="36">
+						<img class="page-logo-background" alt="Логотип «Device»." src="images/logo.svg" width="146" height="37">
+						<img class="page-logo" alt="Логотип «Device»." src="images/logo.svg" width="146" height="37">
 					</a>
 
 					<form class="search" action="https://echo.htmlacademy.ru/" method="post">
@@ -257,7 +257,7 @@
 						<li class="catalog-categories-item">
 							<a class="catalog-categories-link" href="catalog.html">
 								<div class="catalog-categories-link-div selfie-monopods"></div>
-								<span>Моноподы для селфи</span>
+								<span>Моноподы для&nbsp;селфи</span>
 							</a>
 						</li>					
 						<li class="catalog-categories-item">
@@ -294,19 +294,17 @@
 					<div class="tabs-container">
 						<ul class="tabs-list">
 							<li class="tabs-item">
-								<!--<input class="tabs-input visually-hidden" type="radio" name="show" id="delivery" value="show-delivery" checked="">
-								<label class="tabs-lable" for="delivery">Доставка</label>-->
-								<button class="button tabs-button-active show-delivery" type="button">
+								<button class="button tabs-button-active" type="button">
 									<span class="yellow-button-span">Доставка</span>
 								</button>
 							</li>
 							<li class="tabs-item">
-								<button class="button yellow-button show-guarantee" type="button">
+								<button class="button yellow-button" type="button">
 									<span class="yellow-button-span">Гарантия</span>
 								</button>
 							</li>					
 							<li class="tabs-item">
-								<button class="button yellow-button show-credit" type="button">
+								<button class="button yellow-button" type="button">
 									<span class="yellow-button-span">Кредит</span>
 								</button>
 							</li>
@@ -348,7 +346,7 @@
 								<path d="m46.7 15.4-6.5-8.2c-.3-.4-.7-.6-1.2-.6h-8.3V1.5C30.7.7 30 0 29.2 0H1.5C.7 0 0 .7 0 1.5S.7 3 1.5 3h26.2v21.7H15.8c-.6-1.9-2.4-3.3-4.5-3.3-2.6 0-4.8 2.2-4.8 4.8 0 2.6 2.2 4.8 4.8 4.8 2.1 0 3.9-1.4 4.5-3.3h13.4c.8 0 1.5-.7 1.5-1.5V9.6h7.6l5.7 7.3v7.9h-2.2c-.6-1.9-2.4-3.3-4.5-3.3-2.6 0-4.8 2.2-4.8 4.8 0 2.6 2.1 4.8 4.8 4.8 2.1 0 3.9-1.4 4.5-3.3h3.7c.8 0 1.5-.7 1.5-1.5v-9.9c0-.4-.1-.7-.3-1ZM11.3 28c-1 0-1.8-.8-1.8-1.8s.8-1.8 1.8-1.8 1.8.8 1.8 1.8-.9 1.8-1.8 1.8Zm26.1 0c-1 0-1.8-.8-1.8-1.8s.8-1.8 1.8-1.8 1.8.8 1.8 1.8-.9 1.8-1.8 1.8Z" fill="#000"/><path d="M19.4 9.6c.8 0 1.5-.7 1.5-1.5s-.7-1.5-1.5-1.5H4.8c-.8 0-1.5.7-1.5 1.5S4 9.6 4.8 9.6h14.6ZM17.7 14.7c0-.8-.7-1.5-1.5-1.5H1.5c-.8 0-1.5.7-1.5 1.5s.7 1.5 1.5 1.5h14.7c.8 0 1.5-.7 1.5-1.5Z"/>
 							</svg>
 						</div>
-						Доставим редкий товар под заказ
+						<span>Доставим редкий товар под заказ</span>
 						<div class="emblem">
 							<span class="exclusive-delivery-tooltip">
 								<svg width="2" height="12" viewBox="0 0 2 12" fill="#000000" xmlns="http://www.w3.org/2000/svg">
@@ -542,7 +540,6 @@
 			</form>
 		</div>
 	</div>
-
-
+	
 	</body>
 </html>
