--- a/catalog.html
+++ b/catalog.html
@@ -58,7 +58,7 @@
 									</svg>Корзина</a>
 								
 								<div class="popover popover-close">
-									<h2 class="visually-hidden">Корзина</h2>
+									<span class="visually-hidden">Список товаров в корзине</span>
 									<ul class="cart-items-list">
 										<li class="cart-item">
 											<a class="cart-item-link" href="#">
@@ -458,6 +458,5 @@
 				</div>
 			</div>
 		</footer>
-
 	</body>
 </html>
