--- a/catalog.html
+++ b/catalog.html
@@ -5,7 +5,7 @@
 		<title>HTML Academy: Девайс каталог</title>
 
 		<link rel="icon" href="favicon.ico">
-		<link rel="icon" type="image/png" sizes="32x32" href="img/favicon-32.png">
+		<link rel="icon" type="image/png" sizes="32x32" href="image/favicon-32.png">
 	
 		<link rel="stylesheet" href="css/style.css">
 		<meta name="keywords" content="Device, Девайс">
@@ -168,7 +168,6 @@
 			<section class="produst-catalog">
 				<div class="container">
 					<div class="produst-catalog-container">
-						<!-- Фильтрация -->
 						<form class="catalog-filter" action="https://echo.htmlacademy.ru/" method="get">
 							<h3 class="h3-catalog">Фильтр:</h3>
 							<fieldset class="catalog-filter-group">
@@ -240,7 +239,7 @@
 								</ul>
 							</fieldset>
 
-							<fieldset class="catalog-filter-group">
+							<fieldset class="catalog-filter-group whith-radio">
 								<legend class="catalog-filter-title">Bluetooth</legend>
 								<ul class="catalog-filter-list">
 									<li class="catalog-filter-item">
@@ -275,11 +274,13 @@
 									</select>
 									<div class="button-container">	
 											<button class="sorting-button up" type="button">
+												<span class="visually-hidden">Выбрать предыдущий пункт сортировки</span>
 												<svg width="12" height="10" viewBox="0 0 12 10" fill="#000" xmlns="http://www.w3.org/2000/svg">
 													<path d="m6 0 5.5 10H.5"/>
 												</svg>
 											</button>
 											<button class="sorting-button down" type="button">
+												<span class="visually-hidden">Выбрать следующий пункт сортировки</span>
 												<svg width="12" height="10" viewBox="0 0 12 10" fill="#000" xmlns="http://www.w3.org/2000/svg">
 													<path d="m6 0 5.5 10H.5"/>
 												</svg>
@@ -336,8 +337,9 @@
 												</div>
 											</a>
 										</li>
-										<li class="product-card">
-											<a class="product-card-link new" href="#">
+										<li class="product-card"> 
+											<!--для добавления отметки NEW необходимо прописать ссылке класс class="new" -->
+											<a class="product-card-link" href="#">
 												<div class="product-card-image-content">
 													<div class="product-card-image-hover">											
 														<span class="yellow-button-span">Показать</span>
@@ -356,11 +358,13 @@
 								<button class="white-button" type="button">&nbsp;Загрузить еще</button>
 
 								<div class="pagination-container">
-										<a class="pagination-prev pagination-disabled">Назад</a>
+										<!--для скрытия кнопки необходимо добавить стиль pagination-disabled-->
+										<a class="pagination-prev">Назад</a>
 
 										<ul class="pagination">
+											<!--для выбранного элемента пагинации жобавляется класс pagination-current"-->
 											<li class="pagination-item">
-												<a class="pagination-link pagination-current">1</a>
+												<a class="pagination-link" href="#">1</a>
 											</li>
 											<li class="pagination-item">
 												<a class="pagination-link" href="#">2</a>
@@ -416,36 +420,36 @@
 	
 					<h3 class="visually-hidden">Социальные сети</h3>
 					<ul class="social-list">
-					<li class="social-item">			
-						<a class="social-link twitter" href="https://www.facebook.com/htmlacademy">
-						<span class="visually-hidden">facebook</span>
-						<span class="social-link-span">
-							<svg aria-hidden="true" focusable="false" width="9" height="19" viewBox="0 0 9 19" fill="none" xmlns="http://www.w3.org/2000/svg">
-							<path d="M6.5 3.36H9v-3H5.6C2.8.36 2 2.06 2 4.56v1.8H0v3h2v9h3v-9h3.3l.6-3H5v-1.5c0-.8.3-1.5 1.5-1.5Z" />
-							</svg>
-						</span>
-						</a>
-					</li>
-					<li class="social-item">
-						<a class="social-link facebook" href="https://www.instagram.com/htmlacademy/">
-						<span class="visually-hidden">instagram</span>
-						<span class="social-link-span">
-							<svg aria-hidden="true" focusable="false" width="16" height="17" viewBox="0 0 16 17" fill="none" xmlns="http://www.w3.org/2000/svg">
-							<path d="M14.7 1.66c-.9-.9-2-1.3-3.4-1.3H4.7C1.9.36 0 2.26 0 5.06v6.6c0 1.4.4 2.6 1.4 3.4.9.9 2 1.3 3.3 1.3h6.6c1.4 0 2.6-.4 3.4-1.3.8-.9 1.3-2 1.3-3.4v-6.6c0-1.4-.4-2.6-1.3-3.4ZM8 12.46c-2.2 0-4.1-1.8-4.1-4.1s1.9-4.1 4.1-4.1c2.2 0 4.1 1.8 4.1 4.1s-1.9 4.1-4.1 4.1Zm4.6-7.4c-.7 0-1.3-.5-1.3-1.3s.5-1.3 1.3-1.3c.7 0 1.3.6 1.3 1.3 0 .7-.6 1.3-1.3 1.3Z" />
-							</svg>
-						</span>
-						</a>
-					</li>
-					<li class="social-item">
-						<a class="social-link youtube" href="https://twitter.com/htmlacademy_ru">
-						<span class="visually-hidden">twitter</span>
-						<span class="social-link-span">
-							<svg aria-hidden="true" focusable="false" width="16" height="15" viewBox="0 0 16 15" fill="none" xmlns="http://www.w3.org/2000/svg">
-							<path d="M10.35.51c1.6-.5 2.77.3 3.41 1.1.53-.2 1.17-.4 1.81-.6a2 2 0 0 1-.85 1.6c.75.2 1.28-.4 1.28-.4-.1.9-.96 1.69-1.5 1.89-.2 6.27-2.98 10.35-9.49 10.26H4.6c-.32 0-3.95-.4-4.59-1.8 2.13.2 3.63-.4 4.37-1.1-.85-.3-2.56-.4-2.77-2.78.32.2.53.3 1.17.2C1.6 8.08.32 7.38.43 5.39c.32.3.96.5 1.28.4-.64-.2-1.92-3.09-.86-4.58 1.71 1.7 3.52 3.38 6.72 3.48C7.8 2.6 8.64 1.21 10.35.51Z" />
-							</svg>
-						</span>
-						</a>
-					</li>
+						<li class="social-item">			
+							<a class="social-link" href="https://www.facebook.com/htmlacademy">
+								<span class="visually-hidden">facebook</span>
+								<span class="social-link-span">
+									<svg aria-hidden="true" focusable="false" width="9" height="19" viewBox="0 0 9 19" fill="none" xmlns="http://www.w3.org/2000/svg">
+										<path d="M6.5 3.36H9v-3H5.6C2.8.36 2 2.06 2 4.56v1.8H0v3h2v9h3v-9h3.3l.6-3H5v-1.5c0-.8.3-1.5 1.5-1.5Z" />
+									</svg>
+								</span>
+							</a>
+						</li>
+						<li class="social-item">
+							<a class="social-link" href="https://www.instagram.com/htmlacademy/">
+								<span class="visually-hidden">instagram</span>
+								<span class="social-link-span">
+									<svg aria-hidden="true" focusable="false" width="16" height="17" viewBox="0 0 16 17" fill="none" xmlns="http://www.w3.org/2000/svg">
+										<path d="M14.7 1.66c-.9-.9-2-1.3-3.4-1.3H4.7C1.9.36 0 2.26 0 5.06v6.6c0 1.4.4 2.6 1.4 3.4.9.9 2 1.3 3.3 1.3h6.6c1.4 0 2.6-.4 3.4-1.3.8-.9 1.3-2 1.3-3.4v-6.6c0-1.4-.4-2.6-1.3-3.4ZM8 12.46c-2.2 0-4.1-1.8-4.1-4.1s1.9-4.1 4.1-4.1c2.2 0 4.1 1.8 4.1 4.1s-1.9 4.1-4.1 4.1Zm4.6-7.4c-.7 0-1.3-.5-1.3-1.3s.5-1.3 1.3-1.3c.7 0 1.3.6 1.3 1.3 0 .7-.6 1.3-1.3 1.3Z" />
+									</svg>
+								</span>
+							</a>
+						</li>
+						<li class="social-item">
+							<a class="social-link" href="https://twitter.com/htmlacademy_ru">
+								<span class="visually-hidden">twitter</span>
+								<span class="social-link-span">
+									<svg aria-hidden="true" focusable="false" width="16" height="15" viewBox="0 0 16 15" fill="none" xmlns="http://www.w3.org/2000/svg">
+										<path d="M10.35.51c1.6-.5 2.77.3 3.41 1.1.53-.2 1.17-.4 1.81-.6a2 2 0 0 1-.85 1.6c.75.2 1.28-.4 1.28-.4-.1.9-.96 1.69-1.5 1.89-.2 6.27-2.98 10.35-9.49 10.26H4.6c-.32 0-3.95-.4-4.59-1.8 2.13.2 3.63-.4 4.37-1.1-.85-.3-2.56-.4-2.77-2.78.32.2.53.3 1.17.2C1.6 8.08.32 7.38.43 5.39c.32.3.96.5 1.28.4-.64-.2-1.92-3.09-.86-4.58 1.71 1.7 3.52 3.38 6.72 3.48C7.8 2.6 8.64 1.21 10.35.51Z" />
+									</svg>
+								</span>
+							</a>
+						</li>
 					</ul>
 	
 					<h3 class="visually-hidden">Ссылка Html Academy</h3>
