--- a/catalog.html
+++ b/catalog.html
@@ -359,7 +359,7 @@
 
 								<div class="pagination-container">
 										<!--для скрытия кнопки необходимо добавить стиль pagination-disabled-->
-										<a class="pagination-prev">Назад</a>
+										<a class="pagination-prev" href="#">Назад</a>
 
 										<ul class="pagination">
 											<!--для выбранного элемента пагинации жобавляется класс pagination-current"-->
